python01 is ready with typos corrected

--- a/notebooks/python01.ipynb
+++ b/notebooks/python01.ipynb
@@ -56,7 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "프로그램은 컴퓨터 프로그램을 가리킨다. 그리고 경우에 따라 프로그램, 코드, 명령문 표현을 특별한 정의 없이 사용한다.\n",
+    "프로그램은 여기서는 컴퓨터 프로그램을 가리킨다. 그리고 경우에 따라 프로그램, 코드, 명령문 등의 표현을 \n",
+    "특별한 정의 없이 사용한다.\n",
     "프로그램은 완성된 컴퓨터 프로그램, 코드는 프로그램의 일부, 명령문은 짧은 코드 정도로 이해할 수 있다.\n",
     "반면에 소스코드는 완성된 프로그램의 원본 코드 전체를 의미한다."
    ]
@@ -72,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "파이썬은 __스크립트 언어__(script language)이다. 즉, 명령문을 작성한 후에 한 줄씩 바로 실행시킬 수 있다."
+    "파이썬은 __스크립트 언어__(script language)다. 즉, 명령문을 작성한 후에 한 줄씩 바로 실행시킬 수 있다."
    ]
   },
   {
@@ -91,9 +92,9 @@
     "\n",
     "* 파이썬 기본 쉘의 명령 프롬프트: `>>>`\n",
     "\n",
-    "* IPython 명령 프롬프트: `In [1]:`\n",
+    "* IPython 명령 프롬프트: `In [17]:`\n",
     "\n",
-    "여기서는 IPython 명령 프롬프트이며, 숫자는 실행된 명령문들의 순서를 나타낸다.\n",
+    "여기서는 IPython 명령 프롬프트를 사용하며, 대괄호 안의 숫자는 실행된 명령문들의 순서를 나타낸다.\n",
     "숫자가 클 수록 나중에 실행되었다는 의미이다."
    ]
   },
@@ -149,14 +150,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__함수__(function)는 지정된 인자를 사용하여 특정 계산을 실행한다.\n",
+    "__함수__(function)는 지정된 인자를 사용하여 특정 계산과 지정된 기능을 수행한다.\n",
     "프로그래밍에서의 함수와 수학에서의 함수는 사용법과 모양에 있어서 서로 다르지만 \n",
     "기본적으로 지정된 값을 이용하여 계산을 실행한다는 점에서 동일한 개념이다.\n",
     "다만 `print()` 함수가 하는 일에서 보았듯이 수학의 함수와 사용법이 많이 다르기에\n",
     "익숙해지는 데에 조금 시간이 걸릴 수 있다. \n",
     "\n",
     "`print()` 함수는 무언가를 계산하는 것 이외에 지정된 문자열을 화면에 출력하는 일도 수행한다.\n",
-    "이처럼 계산 이외에 다른 일을 하는 것을 부수 효과(side effect)라고 한다.\n",
+    "이처럼 계산 이외에 다른 일을 하는 것을 __부수 효과__(side effect)라고 한다.\n",
     "\n",
     "__참고:__ 엄밀히 따지면 이런 작업도 계산이라고 할 수 있지만, 수학자에게는 매우 생소하게 다가올 것이다.\n",
     "부수 효과를 참고서에 따라 __부작용__이라 부르는 경우도 있다."
@@ -223,8 +224,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "변수 선언에 사용되는 등호 기호(`=`) 때문에 `변수와 값이 동일하다` 로 이해하면 안된다.\n",
-    "여기서는 동일하다의 의미가 아니라 변수가 지정된 값을 가리킨다는 의미미며, \n",
+    "변수 선언에 사용되는 등호 기호(`=`) 때문에 `\"변수와 값이 동일하다\"` 로 이해하면 안된다.\n",
+    "여기서는 동일하다의 의미가 아니라 변수가 지정된 값을 가리킨다는 의미이며, \n",
     "변수라는 말의 의미에서 알 수 있듯이 변수가 가리키는 값은 언제든지 변경될 수 있다.\n",
     "\n",
     "아래 코드는 변수 `a`가 가리키는 값을 5로 변경한다.\n",
@@ -245,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "변수가 가리키는 값을 `print()` 함수를 이용하여 확인할 수도 있다."
+    "변수가 가리키는 변경된 값을 `print()` 함수를 이용하여 확인할 수도 있다."
    ]
   },
   {
@@ -278,7 +279,6 @@
    "source": [
     "파이썬은 여러 종류의 값을 저장하고 계산할 수 있으며,\n",
     "값을 표현하기 위한 다양한 방식을 지원한다.\n",
-    "\n",
     "파이썬은 몇 가지 종류의 값을 기본으로 제공하며, 함수를 이용하여 \n",
     "무한히 많은 값을 표현하고 다룰 수 있는 기능을 제공한다.\n",
     "\n",
@@ -681,7 +681,7 @@
     "값을 저장해 두고 필요할 때 재활용하려면 저장된 값을 특정 이름과 연결시켜주어야 한다.\n",
     "그러면 아무리 크고 복잡한 값이라 하더라고 해당 값을 가리키는 이름으로 간단하게 다룰 수 있다.\n",
     "이렇게 특정 값을 가리키는 이름이 __변수__(variables)이며, \n",
-    "값과 변수를 연결시키는 과정 __변수 선언__이다."
+    "값과 변수를 연결시키는 작업이 __변수 선언__이다."
    ]
   },
   {
@@ -708,7 +708,7 @@
     "    * continue\n",
     "    * 등등\n",
     "* '-', '+', '*','/' 등의 연산자 기호 사용 불가\n",
-    "* '@', '$', '?' 등의 기호 사용 불가"
+    "* '@', '$', '?', 쉼표, 공백 등 사용 불가"
    ]
   },
   {
@@ -744,10 +744,11 @@
     "변수 = 값\n",
     "```\n",
     "\n",
-    "예를 들어, 아래 코드는 변수 `a_number`는 정수 2를,\n",
-    "변수 `a_word`는 `dog`라는 문자열을 가리키도록 한다.\n",
+    "예를 들어, 변수 `a_number`는 정수 2를,\n",
+    "변수 `a_word`는 `dog`라는 문자열을 가리키도록 하려면 아래와 같이 두 개의 명령문을 작성한다.\n",
     "\n",
-    "__참고:__ 프로그램의 일부 또는 전체를 __코드__라 부른다."
+    "__참고:__ 여러 개의 명령문은 기본적으로 줄바꿈으로 구분된다. \n",
+    "파이썬은 줄바꿈과 들여쓰기가 명령문 작성 문법의 일부이다. "
    ]
   },
   {
@@ -890,12 +891,13 @@
    "source": [
     "파이썬에서 사용되는 모든 값은 특정 __자료형__(data type)에 속한다.\n",
     "지금까지 다룬 값들의 자료형은 다음과 같다. \n",
+    "파이썬에서 기본으로 제공하는 이외에 더 많이 있으며 앞으로 차차 만나게 될 것이다.\n",
     "\n",
-    "* `int`: 2, 3 등의 정수\n",
-    "* `float`: 1.2, 5.0 등의 유리수\n",
-    "* `str`: `\"dog\"`, `\"python\"` 등의 문자열\n",
-    "\n",
-    "파이썬에서 기본으로 제공하는 이외에 더 많이 있으며 앞으로 차차 만나게 될 것이다."
+    "| 자료형 | 예제 |\n",
+    "|---|---|\n",
+    "| `int` | 2, 3 등의 정수 |\n",
+    "| `float` | 1.2, 5.0 등의 유리수 |\n",
+    "| `str` | `\"dog\"`, `\"python\"` 등의 문자열|"
    ]
   },
   {
@@ -903,7 +905,7 @@
    "metadata": {},
    "source": [
     "변수의 자료형은 변수가 가리키는 값의 자료형으로 지정된다.\n",
-    "변수의 자료형은 `type()` 함수를 이용한다."
+    "변수의 자료형은 `type()` 함수를 이용하여 확인할 수 있다."
    ]
   },
   {
@@ -950,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "변수가 가리키는 값이 변경되는 자료형도 함께 변경된다."
+    "변수가 가리키는 값이 변경되면 변수의 자료형도 함께 변경된다."
    ]
   },
   {
@@ -993,11 +995,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "지금까지 살펴보았듯이 `float`, `int`, `print`, `type`와 같은 단어는 녹색으로 표기되었다.\n",
+    "파이썬 코드를 작성하면 `float`, `int`, `print`, `type`와 같은 단어는 녹색으로 표기된다.\n",
     "이는 그 단어들이 파이썬에서 특별한 역할을 수행하는 함수의 이름이기 때문이다. \n",
     "그런 함수 이름을 변수로 사용할 수 있지만, 그렇게 되면\n",
-    "기존 함수의 정의가 변경될 수 있기 때문에 특별항 이유가 없다면 \n",
-    "변수로 사용하는 일을 하지 말아야 한다.\n",
+    "기존 함수의 정의가 변경될 수 있기 때문에 특별한 이유가 없다면 \n",
+    "변수로 사용하지 말아야 한다.\n",
     "\n",
     "예를 들어, 아래 코드는 `print`를 정수 4를 가리키는 변수로 선언한다.\n",
     "\n",
@@ -1082,7 +1084,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "새롭게 선언된 변수는 연산 결과를 가리킨다."
+    "새롭게 선언된 변수는 표현식의 연산 결과를 가리킨다."
    ]
   },
   {
@@ -1117,7 +1119,7 @@
    "metadata": {},
    "source": [
     "두 개의 문자열을 이어붙이거나 지정된 횟수만큼 복제해서 이어붙일 수 있다.\n",
-    "사용되는 연산자는 덧셈 기호와 곱셈 기호가 사용된다."
+    "사용되는 연산자는 덧셈 기호와 곱셈 기호이다."
    ]
   },
   {
@@ -1581,7 +1583,7 @@
     "* 문자열(`str`)\n",
     "\n",
     "네 자료형 모두 단일한 값의 자료형이라는 의미에서 __스칼라__ 자료형이라 부른다.\n",
-    "스칼라 자료형이 아니면서 파이썬에서 기본으로 제공하는 매우 유용한 자료형은 나중에 소개한다."
+    "스칼라 자료형이 아니면서 파이썬에서 기본으로 제공하는 모음 자료형(collections)은 나중에 소개한다."
    ]
   },
   {
@@ -1711,10 +1713,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "위와 같은 현상이 파이썬의 한계로 인해 발생하는 게 아니라\n",
-    "컴퓨터에서 부동소수점을 다루는 매우 복잡하지만 불완전한 방식 때문에 발생한다.\n",
+    "위와 같은 현상은 파이썬의 한계가 아니라,\n",
+    "컴퓨터에서 부동소수점을 다루는 매우 복잡하면서 불완전한 방식 때문에 발생한다.\n",
     "왜 이런 문제가 발생하는가를 이해하는 일은 쉽지 않다.\n",
-    "다만, 부동소수점 연산을 매우 조심스럽게 다루어야 한다는 점은 기억해 두어야 한다."
+    "다만, 부동소수점 연산을 매우 조심스럽게 다루어야 한다는 점은 기억해 두어야 한다.\n",
+    "여기서는 부동소수점 연산을 거의 다루지 않는다."
    ]
   },
   {
@@ -1733,10 +1736,16 @@
     "* `True`\n",
     "* `False`\n",
     "\n",
-    "이 두 개의 값만을 이용하여 복잡한 프로그램을 구현할 수 있다.\n",
+    "이 두 개의 값만을 이용하여 복잡한 프로그램을 구현할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제\n",
     "\n",
-    "예제: 강아지를 한 마리만 갖고 있다고 가정하자. \n",
-    "\n",
+    "강아지를 한 마리만 갖고 있다고 가정하자. \n",
     "이것을 표현하기 위해 puppy(강아지 한마리)라는 변수에 True를 할당하고, 여러 마리의 강아지를 뜻하는 puppies 변수에는 False를 할당한다."
    ]
   },
@@ -1832,7 +1841,7 @@
    "source": [
     "__주의사항:__ 위에서 사용된 `print()` 함수의 사용법을 기억해둔다. \n",
     "`print()` 함수는 인자를 여러 개 받을 수 있으며 그 값들을 동시에 한 줄에 출력한다. \n",
-    "각각의 값은 스페이스(space)로 구분된다."
+    "각각의 값은 공백 문자(space)로 구분된다."
    ]
   },
   {
@@ -1841,7 +1850,7 @@
    "source": [
     "#### 숫자 비교\n",
     "\n",
-    "일반적으로 사용하는 숫자들의 비교를 나타내는 연산자들은 다음과 같다. 리턴값은 모두 부울 자료형이다.\n",
+    "일반적으로 사용하는 숫자들의 비교를 나타내는 연산자들은 다음과 같다. 결과는 모두 부울 자료형이다.\n",
     "\n",
     "* `!=`: 다른지 여부를 판단\n",
     "* `==`: 같은지 여부를 판단\n",
@@ -2294,10 +2303,13 @@
     "\n",
     "```python\n",
     "if 부울표현식:\n",
-    "    명령문\n",
+    "    명령문1\n",
     "else:\n",
-    "    조건문\n",
-    "``` "
+    "    명령문2\n",
+    "``` \n",
+    "\n",
+    "* 부울표현식이 `True`로 계산될 때: 명령문1 실행\n",
+    "* 부울표현식이 `False`로 계산될 때: 명령문2 실행"
    ]
   },
   {
@@ -2439,7 +2451,7 @@
    "metadata": {},
    "source": [
     "아래 세 함수는 인자로 들어온 값을 각각 정수, 부동소수점, 부울 자료형의 값으로 변환한다.\n",
-    "단, 세 함후 모두 인자로 사용된 값에 따라 오류가 발생할 수 있다.\n",
+    "단, 세 함후 모두 인자로 사용되는 값에 따라 오류를 발생시킬 수 있다.\n",
     "\n",
     "* `int()`\n",
     "* `float()`\n",
@@ -2490,6 +2502,83 @@
    ],
    "source": [
     "int(4.8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "정수 모양의 문자열을 진짜 정수로 형변환시킬 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "238"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "an_int = int('238')\n",
+    "an_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(an_int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "정수 모양의 문자열이 아니면 오류가 발생한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '238.0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-6972be62e04f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0man_int\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'238.0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0man_int\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '238.0'"
+     ]
+    }
+   ],
+   "source": [
+    "an_int = int('238.0')\n",
+    "an_int"
    ]
   },
   {
@@ -2601,6 +2690,83 @@
    "source": [
     "a_float = float(an_int)\n",
     "\n",
+    "a_float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "부동소수점 모양의 문자열을 진짜 부동소수점으로 형변환시킬 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.38"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_float = float('2.38')\n",
+    "a_float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "부동소수점"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '238f0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e318b4513d01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma_float\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'238f0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ma_float\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '238f0'"
+     ]
+    }
+   ],
+   "source": [
+    "a_float = float('238f0')\n",
     "a_float"
    ]
   },
@@ -2822,7 +2988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
