--- a/notebooks/python01.ipynb
+++ b/notebooks/python01.ipynb
@@ -22,7 +22,7 @@
     "* 파이썬 언어 소개\n",
     "* 변수와 변수 선언\n",
     "* 연산\n",
-    "* 스칼라 자료형: 정수, 부동소수점, 문자열, 부울 자료형"
+    "* 스칼라 자료형 1편: 정수, 부동소수점, 부울 값, `None`"
    ]
   },
   {
@@ -1586,7 +1586,7 @@
     "collapsed": true
    },
    "source": [
-    "## 스칼라 자료형"
+    "## 스칼라 자료형 1편"
    ]
   },
   {
@@ -1595,16 +1595,18 @@
     "collapsed": true
    },
    "source": [
-    "파이썬에서 기본으로 제공하는 자료형 중에서 가장 기본적으로 사용되는 네 개의 자료형을 소개한다. \n",
-    "\n",
-    "소개되는 자료형은 아래 네 종류이다.\n",
+    "파이썬에서 기본으로 제공하는 자료형 중에서 가장 기본적으로 사용되는 자료형 세 개를 소개한다. \n",
     "\n",
     "* 정수(`int`)\n",
     "* 부동소수점(`float`)\n",
     "* 부울 값(`bool`)\n",
-    "* 문자열(`str`)\n",
     "\n",
-    "네 자료형 모두 단일한 값의 자료형이라는 의미에서 __스칼라__ 자료형이라 부른다.\n",
+    "세 자료형 모두 단일한 값의 자료형이라는 의미에서 __스칼라__ 자료형이라 부른다.\n",
+    "스칼라 자료형 2편에서 문자열, 날짜와 시간 등과 같은 다른 스칼라 자료형을 좀 더 살펴본다.\n",
+    "\n",
+    "__참고:__ 문자열은 언어에 따라 스칼라 자료형이 아닐 수도 있다.\n",
+    "예를 들어, C 언어는 문자열을 문자로 이루어진 어레이로 정의되기에\n",
+    "스칼라 자료형이라 말하기 어렵다.\n",
     "스칼라 자료형이 아니면서 파이썬에서 기본으로 제공하는 모음 자료형(collections)은 나중에 소개한다."
    ]
   },
@@ -1622,6 +1624,28 @@
     "일반적으로 알고 있는 정수(자연수, 0, 음의 정수)들의 자료형이며,\n",
     "앞서 살펴보았듯이 덧셈, 뺄셈, 곱셈, 나눗셈 등의 일반 연산이 가능하다.\n",
     "정수 자료형은 `int`로 표기한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26254519291092456596965462913230729701102721"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ival = 17239871\n",
+    "\n",
+    "ival ** 6  # ival의 6승"
    ]
   },
   {
@@ -2459,6 +2483,162 @@
    "metadata": {},
    "source": [
     "__참고:__ `if` 조건문의 보다 다양한 활용법은 나중에 자세히 다룬다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `None` 값"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`None`은 어떤 의미도 없는 값, 소위 널(null)값이며, \n",
+    "문법적으로 `NoneType` 자료형의 유일한 값이다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b is not None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `None`을 반환하는 함수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "함수 중에 반환값이 `None` 인 경우가 많이 있다.\n",
+    "대표적으로 `print()` 함수가 아무 것도 반환하지 않는다.\n",
+    "즉, 화면에 출력되는 문자열은 `print()` 함수의 반환값이 아니라, \n",
+    "추가 기능의 결과, 즉 부수 효과이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파이썬이 좋아요!\n"
+     ]
+    }
+   ],
+   "source": [
+    "none_value = print(\"파이썬이 좋아요!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "none_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "none_value == None"
    ]
   },
   {
