--- a/notebooks/python03.ipynb
+++ b/notebooks/python03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 파이썬 기본 자료형 3부"
+    "# 제어문"
    ]
   },
   {
@@ -18,32 +18,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 제어문: `if` 조건문, `for` 반복문, `while` 반복문"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 제어문"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "프로그램 실행의 흐름을 제어하는 세 종류의 제어 명령문을 소개한다.\n",
+    "프로그램 실행의 흐름을 제어하는 세 종류의 제어문(제어 명령문)을 소개한다.\n",
     "\n",
     "* `if` 조건문\n",
     "* `for` 반복문\n",
-    "* `while` 반복문"
+    "* `while` 반복문\n",
+    "* `pass`, `continue`, `break` 예약어"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `if` 조건문"
+    "## `if` 조건문"
    ]
   },
   {
@@ -270,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 다중 조건문"
+    "### 다중 조건문"
    ]
   },
   {
@@ -347,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 부울 연산자를 사용할 때 주의할 점"
+    "### 부울 연산자를 사용할 때 주의할 점"
    ]
   },
   {
@@ -433,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "a, b, c, d = 5, 7, 8, 0\n",
     "\n",
@@ -447,9 +442,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "a, b, c, d = 5, 7, 8, 0\n",
     "\n",
@@ -463,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 중첩 조건문"
+    "### 중첩 조건문"
    ]
   },
   {
@@ -482,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 삼항 표현식"
+    "### 삼항 표현식"
    ]
   },
   {
@@ -556,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 문자열과 `for` 반복문"
+    "## `for` 반복문"
    ]
   },
   {
@@ -650,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `while` 반복문"
+    "## `while` 반복문"
    ]
   },
   {
@@ -859,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1303,14 +1306,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 연습"
+    "## 연습"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문제 1"
+    "### 문제 1"
    ]
   },
   {
@@ -1322,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문제 2"
+    "### 문제 2"
    ]
   },
   {
@@ -1443,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문제 3*"
+    "### 문제 3*"
    ]
   },
   {
@@ -1494,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
