--- a/practices/practice01.ipynb
+++ b/practices/practice01.ipynb
@@ -36,7 +36,18 @@
     "id": "GnTkZZg-z5pJ",
     "outputId": "aeb8e423-e692-44f3-c264-0176e7a2e603"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "25+12"
    ]
@@ -45,7 +56,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "13-19"
    ]
@@ -54,7 +76,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "736.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "92 * 8.0"
    ]
@@ -63,7 +96,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "81.5 / 2.0"
    ]
@@ -72,7 +116,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7 // 5"
    ]
@@ -81,7 +136,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "100 % 7"
    ]
@@ -90,7 +156,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 ** 3"
    ]
@@ -115,7 +192,18 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(3)"
    ]
@@ -124,7 +212,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(3.0)"
    ]
@@ -133,7 +232,18 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type('3')"
    ]
@@ -438,7 +548,7 @@
     }
    ],
    "source": [
-    "# 방식 2\n",
+    "# 방식 3\n",
     "\n",
     "i = 1\n",
     "while i <= 5:\n",
@@ -452,13 +562,7 @@
     "id": "PRQLSWmi0sAF"
    },
    "source": [
-    "**문제 7.** `dogs`와 `cats` 두 개의 변수가 다음과 같이 선언되었다.\n",
-    "\n",
-    "```python\n",
-    "dogs, cats = '12', '7'\n",
-    "```\n",
-    "\n",
-    "(1) `dogs`와 `cats` 변수에 할당된 값의 자료형을 확인하여라.  "
+    "**문제 7.** `dogs`와 `cats` 두 개의 변수가 다음과 같이 선언되었다."
    ]
   },
   {
@@ -468,6 +572,15 @@
    "outputs": [],
    "source": [
     "dogs, cats =  '12', '7'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "PRQLSWmi0sAF"
+   },
+   "source": [
+    "(1) `dogs`와 `cats` 변수에 할당된 값의 자료형을 확인하여라.  "
    ]
   },
   {
@@ -675,7 +788,7 @@
     }
    ],
    "source": [
-    "two and four"
+    "two and not four"
    ]
   },
   {
@@ -713,7 +826,7 @@
     "id": "jLCnfgsk06WQ"
    },
    "source": [
-    "**문제 9.** 15, 28이 각각 짝수인지 홀수인지를 판별하는 코드를 작성하여라. \n",
+    "**문제 9.** 15와 28 각각이 짝수인지 홀수인지를 판별하는 코드를 작성하여라. \n",
     "출력된 결과는 아래와 같은 형식이다.\n",
     "\n",
     "```\n",
@@ -809,7 +922,7 @@
     "\n",
     "A가 선언한 변수를 활용하여 프로그램을 완성하여라.\n",
     "\n",
-    "힌트: 정수 모양의 문자열을 정수로 변환하라."
+    "힌트: 정수 모양의 문자열을 정수로 형변환하라."
    ]
   },
   {
@@ -826,7 +939,7 @@
     }
    ],
    "source": [
-    "# pass 명령문을 삭제하고 필요한 코드 아래에 작성하세요. 필요하면 여러 줄을 이용하세요.\n",
+    "# pass 명령문을 삭제하고 필요한 코드를 작성하세요. 필요하면 여러 줄을 이용하세요.\n",
     "pass\n",
     "\n",
     "# 아래 코드에서 사용된 None 을 모두 적절한 값 또는 수식으로 변경해야 한다.\n",
