--- a/slides/mlmath01.ipynb
+++ b/slides/mlmath01.ipynb
@@ -67,7 +67,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -196,7 +196,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -239,7 +239,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -252,7 +252,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -265,7 +265,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -304,7 +304,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -425,7 +425,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -438,7 +438,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -451,7 +451,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -464,7 +464,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -477,7 +477,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -503,7 +503,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -516,7 +516,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -529,7 +529,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -542,7 +542,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -555,7 +555,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -568,7 +568,7 @@
     "colab_type": "text",
     "id": "pRmg1s6N9ona",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -624,7 +624,7 @@
     "colab_type": "text",
     "id": "NuA531GRDIUB",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -639,7 +639,7 @@
     "colab_type": "text",
     "id": "NuA531GRDIUB",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -898,7 +898,7 @@
     "colab_type": "text",
     "id": "RvO06bXnEnSx",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1096,7 +1096,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1107,7 +1107,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1140,7 +1140,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1245,7 +1245,7 @@
     "colab_type": "text",
     "id": "_W-gOFP1Fc5V",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1360,7 +1360,7 @@
     "colab_type": "text",
     "id": "MmVtbxTlGKxB",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1373,7 +1373,7 @@
     "colab_type": "text",
     "id": "MmVtbxTlGKxB",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1427,7 +1427,7 @@
     "colab_type": "text",
     "id": "MmVtbxTlGKxB",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1524,7 +1524,7 @@
     "colab_type": "text",
     "id": "_EzmXJDpGzRa",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1537,7 +1537,7 @@
     "colab_type": "text",
     "id": "_EzmXJDpGzRa",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1600,7 +1600,7 @@
     "colab_type": "text",
     "id": "_EzmXJDpGzRa",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1613,7 +1613,7 @@
     "colab_type": "text",
     "id": "_EzmXJDpGzRa",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1676,7 +1676,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1715,7 +1715,7 @@
     "colab_type": "text",
     "id": "vkyj7J8_INoq",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1726,7 +1726,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     }
    },
    "source": [
@@ -1937,7 +1937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
