python04 is being prepared

--- a/notebooks/python04.ipynb
+++ b/notebooks/python04.ipynb
@@ -397,7 +397,7 @@
     "<table cellspacing=\"20\">\n",
     "<tr>\n",
     "<td>\n",
-    "<img src=\"images/fun_math1.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/fun_math1.png\">\n",
     "</td>\n",
     "</tr>\n",
     "</table>\n",
@@ -436,7 +436,7 @@
     "<table cellspacing=\"20\">\n",
     "<tr>\n",
     "<td>\n",
-    "<img src=\"images/fun_prog2.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/fun_prog2.png\">\n",
     "</td>\n",
     "</tr>\n",
     "</table>\n",
@@ -1165,7 +1165,7 @@
     "<table cellspacing=\"20\">\n",
     "<tr>\n",
     "<td>\n",
-    "<img src=\"images/fun_pure.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/fun_pure.png\">\n",
     "</td>\n",
     "</tr>\n",
     "</table>\n",
