Ch04 added with exercises

--- a/notebooks/python04.ipynb
+++ b/notebooks/python04.ipynb
@@ -1351,8 +1351,607 @@
     "[PythonTutor:지역변수 전역변수](http://pythontutor.com/visualize.html#code=def%20hour_to_min%28hour%29%3A%0A%20%20%20%20minutes%20%3D%20hour%20*%2060%0A%20%20%20%20return%20minutes%0A%0Atwo_hour%20%3D%20hour_to_min%282%29%0Aprint%28minutes%29&cumulative=false&curInstr=0&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)에서\n",
     "`hour`와 `minutes`의 생존주기, 즉, 언제 생성되고 언제 사라지는지를 확인할 수 있다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 연습문제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3장 마지막 예제에서 숫자 맞히기 게임을 아래와 같이 구현하였다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 25\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 37\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 44\n",
+      "정답입니다.\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# 컴퓨터가 1에서 100사이의 값을 무작위로 선택\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "# secret을 맞출 때까지 반복해서 guess함.\n",
+    "while True:\n",
+    "    guess = int(input(\"맞춰보세요: \"))\n",
+    "\n",
+    "    if secret == guess:\n",
+    "        print(f\"정답입니다.\")\n",
+    "        break                   # 정답이면 게임 종료\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"틀렸습니다.\")\n",
+    "\n",
+    "        if guess < secret:     # 오답이면 크기 비교 알려주기\n",
+    "            print(\"너무 작아!\")\n",
+    "        else:\n",
+    "            print(\"너무 커!\")\n",
+    "\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 위 코드를 함수로 선언해보자.\n",
+    "다만 예측 횟수를 제한하는 역할을 수행하는 값을 인자로 받도록 한다.\n",
+    "즉, 함수가 적절한 인자와 함께 호출되면 게임이 제한된 횟수 내에  `secret`을 맞혀야 하며\n",
+    "그렇지 않으면 게임이 자동으로 종료되도록 한다.\n",
+    "\n",
+    "함수 이름, 인자, 반환값에 대한 정보는 아래와 같이 정해보자. \n",
+    "\n",
+    "- 함수 이름: `guessing`\n",
+    "- 인자: 허용된 예측 횟수를 나타내는 `count_limit`\n",
+    "- 반환값: 제한 횟수 내에 맞혔을 경우엔 추측 횟수, 그렇지 않은 경우엔 제한 횟수 내에 맞히지 못했다는 정보.\n",
+    "\n",
+    "매개변수 `cout_limit`는 게임을 진행할 때 예측 횟수를 제한하는 역할을 수행하는 값을 인자로 받는다.\n",
+    "예를 들어 5가 인자로 사용되면 게임 참여자는 최대 5번 이내에 답을 맞혀야 하며,\n",
+    "그렇지 않으면 게임이 자동 종료된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__업그레이드 1 단계__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "함수를 선언하기 전에 먼저 위 게임을 특정 값을 이용하여 예측 횟수를 제한하도록 해보자.\n",
+    "그러기 위해서는 예를 들어 아래 두 개의 변수를 사용할 수 있다.\n",
+    "\n",
+    "- `count_limit`: 예측 제한 횟수\n",
+    "- `count`: 예측한 횟수\n",
+    "\n",
+    "즉, 게임 참여자가 예측할 때마다 `count`가 가리키는 값을 1씩 키워준 후 그 값이 `count_limit`가\n",
+    "가리키는 값과 같아지면 게임을 멈추게 하면 된다.\n",
+    "\n",
+    "예를 들어, 아래 코드는 예측을 최대 5번까지만 허용한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 25\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 13\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 7\n",
+      "정답입니다.\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "count_limit = 5   # 예측 제한 횟수 지정\n",
+    "count = 0         # 게임 시작할 때 예측한 횟수를 0으로 초기화하기\n",
+    "\n",
+    "# count 값이 count_limit 보다 작은 동안 게임 진행\n",
+    "while count != count_limit:\n",
+    "    guess = int(input(\"맞춰보세요: \"))\n",
+    "    count += 1             # 예측할 때마다 1씩 키워주기\n",
+    "\n",
+    "    if secret == guess:\n",
+    "        print(f\"정답입니다.\")\n",
+    "        break                  # 게임 종료\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"틀렸습니다.\")\n",
+    "\n",
+    "        if guess < secret:  \n",
+    "            print(\"너무 작아!\")\n",
+    "        else:\n",
+    "            print(\"너무 커!\")\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "예측 횟수를 4번으로 제한하고 싶으면 아래와 같이 `count_limit` 변수가 가리키는 값을 4로 수정하면 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 25\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 13\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 19\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "count_limit = 4   # 예측 제한 횟수 = 4\n",
+    "count = 0   \n",
+    "\n",
+    "while count != count_limit:\n",
+    "    guess = int(input(\"맞춰보세요: \"))\n",
+    "    count += 1           \n",
+    "\n",
+    "    if secret == guess:\n",
+    "        print(f\"정답입니다.\")\n",
+    "        break          \n",
+    "\n",
+    "    else:\n",
+    "        print(f\"틀렸습니다.\")\n",
+    "\n",
+    "        if guess < secret:  \n",
+    "            print(\"너무 작아!\")\n",
+    "        else:\n",
+    "            print(\"너무 커!\")\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__업그레이드 2 단계__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그런데 위와 같이 예측 횟수를 바꾸기 위해 코드 자체를 수정하는 것은 바람직하지 않다.\n",
+    "이런 문제를 함수를 이용하면 매우 간단하게 해결할 수 있다.\n",
+    "\n",
+    "위 코드를 함수화하기 위해 생각해야 할 것은 하나이다. 무엇을 함수의 매개변수로 사용할 것인가?\n",
+    "바로 예측 횟수, 즉 `count_limit` 변수를 함수의 매개변수로 지정하면 다른 것은 전혀 바꿀 필요가 없다.\n",
+    "아래와 같이 함수의 이름을 `guessing()`로 지정하고, `count_limit`를 매개변수로 지정하고,\n",
+    "나머지 코드는 그냥 들여쓰기만 하면 된다.\n",
+    "단, `import random`은 함수 밖에 그대로 둔다.\n",
+    "그리고 `count_limit=4` 명령문은 삭제한다. \n",
+    "이유는 `count_limit`의 값이 매개변수를 통해 지정되기 때문이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def guessing(count_limit):\n",
+    "    secret = random.randint(1, 100)\n",
+    "\n",
+    "    # count_limit = 4 # 더 이상 필요없음. 매개변수로 대체됨.\n",
+    "    count = 0    \n",
+    "\n",
+    "    while count != count_limit:\n",
+    "        guess = int(input(\"맞춰보세요: \"))\n",
+    "        count += 1        \n",
+    "\n",
+    "        if secret == guess:\n",
+    "            print(f\"정답입니다.\")\n",
+    "            break        \n",
+    "\n",
+    "        else:\n",
+    "            print(f\"틀렸습니다.\")\n",
+    "\n",
+    "            if guess < secret:  \n",
+    "                print(\"너무 작아!\")\n",
+    "            else:\n",
+    "                print(\"너무 커!\")\n",
+    "\n",
+    "    print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 `guessing()` 함수를 적절한 인자와 함께 호출하면 게임이 시작된다.\n",
+    "예를 들어 예측횟수를 5회로 제한하려면 5와 함께 호출한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 75\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 63\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 69\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 66\n",
+      "정답입니다.\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "guessing(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "예측 횟수를 4로 제한하려면 4를 인자로 사용한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 75\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 66\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 70\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "guessing(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__업그레이드 3 단계__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "게임이 종료될 때 몇 번 예측했는지, 아니면 몇 번까지 예측한 후에 게임이 종료되었는가를 반환하도록 함수를 살짝 \n",
+    "업그레이드해 보자.\n",
+    "\n",
+    "먼저 어떤 경우에 게임이 종료되는가를 확인해야 한다.\n",
+    "\n",
+    "- 경우 1: 제한 횟수 내에 정답을 맞히는 경우\n",
+    "- 경우 2: 제한 횟수 내에 정답을 맞히지 못하는 경우\n",
+    "\n",
+    "첫째 경우엔 예측한 횟수를, 둘째 경우엔 제한 횟수를 반환하도록 할 수 있다.\n",
+    "따라서 각각의 경우에 모두 `return` 예약어를 이용하여 반환값을 지정해야 한다.\n",
+    "경우에 따라 `return` 예약어의 위치가 달라짐에 주의하라. 특히 들여쓰기 수준에 주의해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def guessing(count_limit):\n",
+    "    secret = random.randint(1, 100)\n",
+    "\n",
+    "    count = 0   \n",
+    "    while count != count_limit:\n",
+    "        guess = int(input(\"맞춰보세요: \"))\n",
+    "        count += 1           \n",
+    "\n",
+    "        if secret == guess:\n",
+    "            print(f\"정답입니다.\")\n",
+    "            return count       # 경우 1: 제한 횟수 이전에 예측한 횟수\n",
+    "            # break            # 더 이상 필요 없음. return 이후에는 무조건 함수의 실행이 종료됨.\n",
+    "\n",
+    "        else:\n",
+    "            print(f\"틀렸습니다.\")\n",
+    "\n",
+    "            if guess < secret:  \n",
+    "                print(\"너무 작아!\")\n",
+    "            else:\n",
+    "                print(\"너무 커!\")\n",
+    "\n",
+    "    print(\"종료합니다.\")\n",
+    "    \n",
+    "    return count_limit         # 경우 2: 제한 횟수에 도달했을 때"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제는 게임이 종료될 때마다 예측한 횟수를 알려준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 75\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 63\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 57\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 54\n",
+      "정답입니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guessing(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__업그레이드 4 단계__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "마지막으로 한 번 업그레이드한다. \n",
+    "이번엔 `count_limit` 매개변수를 키워드 인자로 사용한다.\n",
+    "1부터 100까지의 정수를 예측하는 게임이고 이진탐색 방식을 이용하면 최대 7번이면 답을 맞힐 수 있다.\n",
+    "따라서 `count_limit=7`로 지정하도록 하자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def guessing(count_limit=7):           # 키워드 인자를 7로 지정.\n",
+    "    secret = random.randint(1, 100)\n",
+    "\n",
+    "    count = 0   \n",
+    "    while count != count_limit:\n",
+    "        guess = int(input(\"맞춰보세요: \"))\n",
+    "        count += 1           \n",
+    "\n",
+    "        if secret == guess:\n",
+    "            print(f\"정답입니다.\")\n",
+    "            return count   \n",
+    "            # break        \n",
+    "\n",
+    "        else:\n",
+    "            print(f\"틀렸습니다.\")\n",
+    "\n",
+    "            if guess < secret:  \n",
+    "                print(\"너무 작아!\")\n",
+    "            else:\n",
+    "                print(\"너무 커!\")\n",
+    "\n",
+    "    print(\"종료합니다.\")\n",
+    "    \n",
+    "    return count_limit     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 `guessing()` 함수를 호출할 때 인자를 지정하지 않아도 되며, 그럴 때는 자동으로 \n",
+    "예측 횟수가 7로 제한된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 75\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 64\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 69\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 66\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 65\n",
+      "정답입니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guessing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "물론 원하는 값으로 예측 횟수를 제한할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 75\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 66\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "종료합니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guessing(3)"
+   ]
   }
-],
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
