mid-test with solutions added

--- a/practices/mid-test.ipynb
+++ b/practices/mid-test.ipynb
@@ -43,9 +43,7 @@
     "radius = 3\n",
     "pi = 3.14\n",
     "\n",
-    "pass\n",
-    "\n",
-    "circumference = None"
+    "circumference = 2 * pi * radius"
    ]
   },
   {
@@ -57,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "18.84\n"
      ]
     }
    ],
@@ -82,9 +80,12 @@
    "outputs": [],
    "source": [
     "# pass와 None을 적절한 코드와 표현식으로 대체하라.\n",
-    "pass\n",
     "\n",
-    "sum = None"
+    "principal = 5000000  # 원금\n",
+    "rate = 0.02          # 연이자율\n",
+    "\n",
+    "# 10년 후 원금자 이자 (소수점 절삭)\n",
+    "sum = int(principal*(1 + rate)**10)"
    ]
   },
   {
@@ -96,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10년 후 받는 원금 + 이자는 None원입니다.\n"
+      "10년 후 받는 원금 + 이자는 6094972원입니다.\n"
      ]
     }
    ],
@@ -139,7 +140,8 @@
     "def remove_letters(s):\n",
     "    new_song = ''\n",
     "    for word in song.lower():\n",
-    "        pass\n",
+    "        if word not in s:\n",
+    "            new_song += word\n",
     "    \n",
     "    return new_song"
    ]
@@ -152,10 +154,54 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "'whnyrsmlng,thwhlwrldsmlswthy'"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_letters('aeiou ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "대소 문자를 그대로 유지하려면 다음과 해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass 를 적절한 코드로 대체하라.\n",
+    "\n",
+    "def remove_letters(s):\n",
+    "    new_song = ''\n",
+    "    for word in song:\n",
+    "        if word not in s:\n",
+    "            new_song += word\n",
+    "    \n",
+    "    return new_song"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Whnyrsmlng,thwhlwrldsmlswthy'"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,32 +249,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pass를 적절한 코드로 대체하라. return 예약어를 적절하게 사용해야 한다.\n",
     "\n",
     "def even_odd(x):\n",
-    "    pass"
+    "    if x%2==0:                     \n",
+    "        return f\"{x}는 짝수입니다.\"\n",
+    "    else:                          \n",
+    "        return f\"{x}는 홀수입니다.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7는 홀수입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "even_odd(7)"
+    "print(even_odd(7))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4는 짝수입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "even_odd(4)"
+    "print(even_odd(4))"
    ]
   }
  ],
